# cmake-template

./: CMakeLists.txt  README.md  build.sh
cmake/: examples.cmake  googletest.cmake  libzmq.cmake  src.cmake
src/: CMakeLists.txt  main.cpp
